# lk-c

./: README.md  meson.build
include/lk/: buffer.h  chan.h  common.h  input.h  lk.h  memory.h  refptr.h  string.h  thread.h
src/: buffer.c  chan.c  input.c  lk.c  memory.c  refptr.c  sandbox.c  string.c  test.c  thread.c
src/chan/: chan.c  chan_test.c
src/examples/: type_to_file.c
src/thread/: thread.c  thread.h
